syntax = "proto3";

// Package common defines commonly used types agnostic to the node role on the Sonr network.
package core.object.v1;
import "google/protobuf/timestamp.proto";
option go_package = "github.com/sonr-io/sonr/core/object/v1";


// ObjectDoc is a document for an Object stored in the graph.
message ObjectDoc {
    // Did is the identifier of the object.
    string did = 1;

    // Service is the service that created the object.
    string service = 2;

    // Tags are the tags associated with the object.
    repeated string tags = 3;

    // Fields are the fields associated with the object.
    map<string, ObjectField> fields = 4;
}

// ObjectField is a field of an Object.
message ObjectField {
    // Label is the name of the field
    string label = 1;

    // Type is the type of the field
    ObjectFieldType type = 2;

    // Did is the identifier of the field.
    string did = 3;

    // Value is the value of the field
    oneof value {
      // String is the value of the field
      string string_value = 4;

      // Number is the value of the field
      double number_value = 5;

      // Float is the value of the field
      bool bool_value = 6;

      // Array is the value of the field
      ObjectFieldArray array_value = 7;

      // Time is defined by milliseconds since epoch.
      google.protobuf.Timestamp time_stamp_value = 8;

      // Geopoint is the value of the field
    ObjectFieldGeopoint geopoint_value = 9;

      // Blob is the value of the field
      bytes blob_value = 10;

      // Reference is the value of the field
      string reference_value = 11;

      // Eth Address is the value of the field
      bytes eth_value = 12;
    }

    // Metadata is additional info about the field
    map<string, string> metadata = 13;
}

// ObjectFieldArray is an array of ObjectFields to be stored in the graph object.
message ObjectFieldArray {
    // Label is the name of the field
    string label = 1;

    // Type is the type of the field
    ObjectFieldType type = 2;

    // Did is the identifier of the field.
    string did = 3;

    // Entries are the values of the field
    repeated ObjectField items = 4;
}

// ObjectFieldGeopoint is a field of an Object for geopoints.
message ObjectFieldGeopoint {
    // Label is the name of the field
    string label = 1;

    // Type is the type of the field
    ObjectFieldType type = 2;

    // Did is the identifier of the field.
    string did = 3;

    // Latitude is the geo-latitude of the point.
    double latitude = 4;

    // Longitude is the geo-longitude of the field
    double longitude = 5;

    // Metadata is additional info about the field
    map<string, string> metadata = 6;
}

 // ObjectFieldType is the type of the field
enum ObjectFieldType {
    // ObjectFieldTypeUnspecified is the default value
    OBJECT_FIELD_TYPE_UNSPECIFIED = 0;

    // ObjectFieldTypeString is a string or text field
    OBJECT_FIELD_TYPE_STRING = 1;

    // ObjectFieldTypeInt is an integer
    OBJECT_FIELD_TYPE_NUMBER = 2;

    // ObjectFieldTypeBool is a boolean
    OBJECT_FIELD_TYPE_BOOL = 3;

    // ObjectFieldTypeArray is a list of values
    OBJECT_FIELD_TYPE_ARRAY = 4;

    // ObjectFieldTypeDateTime is a datetime
    OBJECT_FIELD_TYPE_TIMESTAMP = 5;

    // ObjectFieldTypeGeopoint is a geopoint
    OBJECT_FIELD_TYPE_GEOPOINT = 6;

    // ObjectFieldTypeBlob is a blob of data
    OBJECT_FIELD_TYPE_BLOB = 7;

    // ObjectFieldTypeReference is a reference to another object by DID
    OBJECT_FIELD_TYPE_REFERENCE = 8;

    // ObjectFieldTypeETU is a pointer to an Ethereum account address.
    OBJECT_FIELD_TYPE_ETH = 9;
}
